k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-svc
  namespace: production
  labels:
    app: nodeapp
spec:
  ports:
  - port: 8080
    name: web
    targetPort: 80
    protocol: TCP
  type: ClusterIP
  selector:
    app: nodeapp
