k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp
  namespace: production
  labels:
    app: nodeapp
spec:
  ingressClassName: nginx
  rules:
  - host: fsl-challenge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp-svc
            port:
              number: 8080
